<resources>
    <string name="app_name">VidEarn</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Sit back and watch your earnings grow with VidEarn</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email id and password to sign in</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="updating">Updating&#8230;</string>

    <!--TODO (Step 9: All the string values are added here.)-->
    <!--START-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="messages_header" />
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="sync_title" />
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="payments">My Payments</string>
    <string name="pending_payments">Payments In Process</string>
    <string name="no_pending_payments">No pending payments!</string>
    <string name="request_payment">Request Payment</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="fab_content_description">Requesting payment</string>
    <string name="earn">Earn</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="autoplay">AutoPlay</string>
    <string name="play_video">Play Video</string>
    <string name="minimum_withdraw_is_10_000_points">Minimum withdraw is 50 000 points (~5$) for USDT and 100 000 points for Bitcoin</string>
    <string name="amount">Amount</string>
    <string name="add_payment">Add payment</string>
    <string name="delete_account">Delete account</string>
    <string name="warning">Please double check your address, we are not responsible of any loss resulting from mistyping addresses</string>
    <string name="done">Done</string>
    <string name="polygon_matic">Network: Polygon (Matic)</string>
    <string name="please_only_paste_your_polygon_usdt_address">Please only paste your polygon UsdT address</string>
    <string name="delete_payment">delete payment</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="by_deleting_your_account_you_will_lose_all_data_and_points_earned">By Deleting your account,you will lose all data and points earned</string>
    <string name="payment_description">We currently only offer to pay via crypto currencies</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">continue</string>
    <string name="ok">ok</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="refer_friend_description">Invite your friend to use our app and we\'ll reward both of you with 500 points</string>
    <string name="share_code">Share Code</string>
    <string name="your_friend_should_enter_this_invite_code">Your friend should enter this invite code after creating an account</string>
    <string name="we_re_so_delighted_you_re_here">We\'re so delighted you\'re here!</string>
    <string name="redeem_now">Redeem Now!</string>
    <string name="skip">Skip</string>
    <string name="collect_your_gift_when_you_enter_your_invite_code">Collect your gift when you enter your invite code</string>
    <string name="enter_your_invite_code">Enter your invite code</string>
    <string name="invite_code">Invite Code</string>
    <string name="default_notification_channel_id">videarn notification channel id</string>
    <string name="main_activity_desc">Each successful video played you\'ll be rewarded with 10 points</string>
    <string name="todo">TODO</string>
    <string name="gift_cards">Request Gift Card</string>
    <string name="faq">FAQ</string>
    <string name="redeem_gift_card">Request Gift Card</string>
    <string name="redeem">Redeem</string>
    <string name="request">Request</string>
    <string name="please_choose_your_region">Please choose your gift card price and put your email address to send you the gift card code</string>
    <string name="email_address">Email Address</string>
    <string name="choose_region">Choose Region:</string>
    <string name="choose_price">Choose Price:</string>
    <string name="request_crypto_payment">Request Crypto Payment</string>
    <string name="gift_card_type">Gift Card Type</string>
    <string name="my_payments">My Payments</string>
    <string name="no_payouts">No payouts!</string>
    <string name="choose_network">Choose Network:</string>
    <string name="choose_coin">Choose Coin:</string>
    <string name="your_balance_100_000_points">Your Balance: 100,000 points</string>
    <string name="pending">Pending..</string>
    <string name="arrow_down">arrow down</string>
    <string name="daily_bonus">Daily Bonus</string>
    <string name="spin"><![CDATA[Spin & Win]]></string>
    <string name="scratch"><![CDATA[Scratch & Win]]></string>
    <string name="bonusredeem">You can redeem your bonus!</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="special_offers">Special Offers</string>
    <string name="rating_button">rating button</string>
    <string name="offerwalls">Offerwalls</string>
    <string name="service_name">Service Running</string>
    <string name="service_body">Fetching offers for you</string>
    <string name="email_verification">Email Verification</string>
    <string name="internet">Passive Earning</string>
    <string name="you_re_now_earning">You\'re Now Earning</string>
    <string name="not_earning">Not Earning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payouts">Payouts</string>
    <string name="my_payouts">My Payouts</string>
    <string name="paid_out">Paid Out</string>
    <string name="request_payout">Request Payout</string>
    <string name="cpalead">CPA Lead</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="reset_your_password">Please put the same email used when you created your account. We will send an email where you can reset your password from there.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cpxresearch">CPX Research</string>
    <string name="share_internet">Share Internet</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="earned_points_today">Earned points today: %d</string>



    <!--END-->
</resources>