<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 8: He we have created the activity_main_drawer.xml file.)-->
<!--START-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_payouts"
            android:icon="@drawable/ic_payment"
            android:title="@string/payouts"/>

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_question_mark_24"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_write_review"
            android:icon="@drawable/baseline_rate_review_24"
            android:title="@string/rate_the_app" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
<!--END-->