<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/my_profile_screen_content_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:gravity="center"
                android:text="@string/we_re_so_delighted_you_re_here"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_redeem"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/reward" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:gravity="center"
                android:text="@string/enter_your_invite_code"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/authentication_description_text_size"
                android:textStyle="normal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_enter_invite_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/invite_code"
                    android:inputType="text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_redeem_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/btn_paddingTopBottom"
                android:text="@string/redeem_now"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/authentication_description_text_size"
                android:textStyle="normal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>